# poetry-pyinstaller-plugin

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/run-tests/: action.yml
.github/workflows/: main.yml  release.yml
_overrides/: home.html  main.html
assets/stylesheets/: custom.min.css
docs/: CNAME  index.md
docs/_overrides/: home.html  main.html
docs/getting_started/: commands.md  creating_your_first_target.md  installation.md  license.md
docs/reference/: hooks.md  plugin_configuration.md  target_configuration.md
getting_started/commands/: index.html
getting_started/creating_your_first_target/: index.html
getting_started/installation/: index.html
getting_started/license/: index.html
poetry_pyinstaller_plugin/: __init__.py  hooks.py  plugin.py  target.py  utils.py
reference/hooks/: index.html
reference/plugin_configuration/: index.html
reference/target_configuration/: index.html
search/: search_index.json
tests/: run.sh  test_examples.py  test_hooks.py  test_plugin.py  test_target.py  test_utils.py
tests/directory/: pyproject.toml  run.sh
tests/directory/my_package/: main.py
tests/directory/my_package_b/: __init__.py
tests/examples/one-file/: pyproject.toml
tests/examples/one-file-bundle/: pyproject.toml
tests/examples/one-file/test_package/: main.py
tests/hooks/: README.md  hooks.py  pyproject.toml  run.sh
tests/hooks/my_package/: __init__.py
tests/one-file/: pyproject.toml  run.sh
tests/one-file-bundle/: main.py  pyproject.toml  run.sh
tests/one-file-prerelease/: pyproject.toml  run.sh
tests/one-file-release/: pyproject.toml  run.sh
tests/package-directory/: README.md  pyproject.toml  run.sh
tests/package-one-file/: README.md  pyproject.toml  run.sh
tests/package-one-file/my_package/: main.py
tests/test_project/: pyproject.toml
tests/test_project/test_package/: main.py
