[project]
name = "poetry-pyinstaller-plugin"
dynamic = ["version"]
authors = [
    { name = "Thomas Mahé", email = "contact@tmahe.dev" },
]
maintainers = [
    { name = "Thomas Mahé", email = "contact@tmahe.dev" },
]
description = "Poetry plugin to build and/or bundle executable binaries with PyInstaller"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
repository = "https://github.com/thmahe/poetry-pyinstaller-plugin"
keywords = ["poetry", "plugin", "pyinstaller", "binary"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
poetry = {version = "^2"}
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocstrings = {extras = ["python"], version = "^0.30.1"}
pyinstaller = "^6.16.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"], markers = "sys_platform != 'win32'" }

[project.entry-points."poetry.application.plugin"]
poetry-pyinstaller-plugin = "poetry_pyinstaller_plugin.plugin:PyInstallerPlugin"

[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
