[tool.poetry]
name = "one-file"
version = "1.0.4b1"
description = ""
authors = ["Thomas Mahé <contact@tmahe.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry-pyinstaller-plugin.scripts]
one-file = { source = "main.py", type = "onefile", hiddenimport = ["rich", "requests"], when="release" }
one-file-internal = { source = "main.py", type = "onefile", hiddenimport = ["rich", "requests"], when="prerelease" }

[tool.poetry-pyinstaller-plugin]
version = "6.11.0"
disable-upx = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
