[tool.poetry]
name = "one-file"
version = "1.0.4"
description = ""
authors = ["Thomas Mahé <contact@tmahe.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = {version = "^2.32.3", markers = 'sys_platform != "win32"'}
requests-cache = {version = "^2.30.0", markers = 'platform_machine == "aarch64"'}

[tool.poetry-pyinstaller-plugin.scripts]
one-file = { source = "main.py", type = "onefile", hiddenimport = ["rich", "requests"], console=false}
one-file-with-version = { source = "main.py", type = "onefile", hiddenimport = ["rich", "requests"], add_version=true }

[tool.poetry-pyinstaller-plugin]
version = "6.11.0"
disable-upx = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
