[project]
name = "test_package"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.14"

[tool.poetry]
exclude = ["my_package/excluded.py"]
include = ["README.md"]

[tool.poetry-pyinstaller-plugin]
pre-build = "hooks.pyinstaller:pre_build"
post-build = "hooks.pyinstaller:post_build"

[tool.poetry-pyinstaller-plugin.targets]
my-tool = "test_package/main.py"

[tool.poetry-pyinstaller-plugin.targets.my-tool-2]
source = "test_package/main.py"

[tool.poetry-pyinstaller-plugin.targets.my-tool-3]
source = "test_package/main.py"
type = "onefile"
exclude-poetry-include = true
add-version = true
strip = true
noupx = true
console = true
windowed = true
uac-admin = true
uac-uiaccess = true
argv-emulation = true
icon = "icon.ico"
arch = "amd64"
hidden-import = ["requests", "certifi"]
when = "prerelease"
certifi = { append = ["certificate.crt"] }
exclude_poetry_include = true
runtime-hooks = ['hooks/my_hook.py']
copy-metadata = ["requests"]
recursive-copy-metadata = ["certifi"]
include = { "file.txt" = "file.txt" }
package = { "file.txt" = "file.txt" }

[tool.poetry-pyinstaller-plugin.targets.my-tool-3.collect]
submodules = ["package_a"]
data = ["package_b", "package_c"]
binaries = ["package_d"]
all = ["package_e"]

[tool.poetry.requires-plugins]
poetry-pyinstaller-plugin = { allow-prereleases = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)"
]
